--- a/web/module/ninos.html
+++ b/web/module/ninos.html
@@ -101,8 +101,8 @@
                             </div>
 
                             <div class="mb-3">
-                                <label class="form-label">Sexo</label>
-                                <select class="form-select" id="sexo">
+                                <label class="form-label">Genero</label>
+                                <select class="form-select" id="genero">
                                     <option value="">Seleccione</option>
                                     <option value="F">Femenino</option>
                                     <option value="M">Masculino</option>
@@ -153,7 +153,7 @@
                         <th>ID</th>
                         <th>Nombre</th>
                         <th>Fecha nacimiento</th>
-                        <th>Sexo</th>
+                        <th>Genero</th>
                         <th>Dirección actual</th>
                         <th>Estado</th>
                     </tr>
