--- a/web/module/ubicaciones.html
+++ b/web/module/ubicaciones.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
+    <div id="seccionMenu"></div>
     <div class="container mt-4">
         <h1>Ubicaciones de niños</h1>
 
@@ -77,5 +78,7 @@
 
     <script src="../js/ubicaciones.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="../js/layout.js"></script>
 </body>
 </html>
