--- a/web/module/abrigo.html
+++ b/web/module/abrigo.html
@@ -1,118 +1,98 @@
 <!doctype html>
 <html lang="es">
 <head>
-
+    <title>Abrigos</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script> 
 </head>
 
-
-
-
 <body>
-  <div id="seccionMenu"></div>
 
-    <header>
-        <ul class="nav nav-tabs" id="navId" role="tablist">
-           
-        </ul>
-        <div class="tab-content" id="myTabContent">
-            <div class="tab-pane fade show active" id="tab1Id" role="tabpanel"></div>
-        </div>
-    </header>
+<div id="seccionMenu"></div>
 
-    <div class="container mt-4">
-        <div class="row justify-content-center align-items-center g-2">
-            <h1>Abrigo</h1>
-        </div>
+<div class="container mt-4">
 
-        <button type="button" class="btn btn-primary btn-lg mb-3" data-bs-toggle="modal" data-bs-target="#modalId">
-            Crear
-        </button>
-        <button class="btn btn-sm btn-danger btn-eliminar" data-id="${fam._id}">Eliminar</button>
+    <h1>Abrigos</h1>
 
-        <!-- Modal -->
-        <div class="modal fade" id="modalId" tabindex="-1" role="dialog" aria-labelledby="modalTitleId"
-            aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="modalTitleId">Registrar Abrigo</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
+    <!-- Botón abrir modal -->
+    <button type="button" class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#modalAbrigo">
+        Crear abrigo
+    </button>
 
-                    <div class="modal-body">
-                        <div class="container-fluid">
+    <!-- Modal -->
+    <div class="modal fade" id="modalAbrigo" tabindex="-1" aria-labelledby="modalAbrigoLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
 
-                            <form id="abrigoFormulario">
-                                <div class="mb-3">
-                                    <label class="form-label">Nombre</label>
-                                    <input type="text" class="form-control" name="nombre" id="nombre" required />
-                                </div>
-
-                                <div class="mb-3">
-                                    <label class="form-label">Descripción</label>
-                                    <input type="text" class="form-control" name="descripcion" id="descripcion" required />
-                                </div>
-
-                                <div class="mb-3">
-                                    <label class="form-label">Estado</label>
-                                    <select class="form-select form-select-lg" name="estado" id="estado">
-                                        <option value="Activo" selected>Activo</option>
-                                        <option value="Inactivo">Inactivo</option>
-                                        <option value="Pendiente">Pendiente</option>
-                                    </select>
-                                </div>
-
-                                <div class="mb-3">
-                                    <label class="form-label">Correo</label>
-                                    <input type="email" class="form-control" name="correo" id="correo" required />
-                                </div>
-
-                                <div class="text-end">
-                                    <button type="submit" class="btn btn-primary">Guardar</button>
-                                    <button type="reset" class="btn btn-danger">Limpiar</button>
-                                </div>
-                            </form>
-
-                        </div>
-                    </div>
-
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-                            Cerrar
-                        </button>
-                    </div>
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalAbrigoLabel">Registrar Abrigo</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
-            </div>
-        </div>
 
-        <!-- Tabla -->
-        <div class="table-responsive mt-3">
-            <table class="table table-primary">
-                <thead>
-                    <tr>
-                        <th scope="col">Id</th>
-                        <th scope="col">Nombre</th>
-                        <th scope="col">Descripción</th>
-                        <th scope="col">Estado</th>
-                        <th scope="col">Correo</th>
-                    </tr>
-                </thead>
-                <tbody id="tablaDatos">
-                </tbody>
-            </table>
+                <div class="modal-body">
+                    <form id="abrigoFormulario">
+
+                        <div class="mb-3">
+                            <label class="form-label">Nombre</label>
+                            <input type="text" class="form-control" id="nombre" required />
+                        </div>
+
+                        <div class="mb-3">
+                            <label class="form-label">Descripción</label>
+                            <input type="text" class="form-control" id="descripcion" required />
+                        </div>
+
+                        <div class="mb-3">
+                            <label class="form-label">Estado</label>
+                            <select class="form-select" id="estado">
+                                <option value="Activo" selected>Activo</option>
+                                <option value="Inactivo">Inactivo</option>
+                                <option value="Pendiente">Pendiente</option>
+                            </select>
+                        </div>
+
+                        <div class="mb-3">
+                            <label class="form-label">Correo</label>
+                            <input type="email" class="form-control" id="correo" required />
+                        </div>
+
+                        <div class="text-end">
+                            <button type="submit" class="btn btn-primary">Guardar</button>
+                            <button type="reset" class="btn btn-secondary">Limpiar</button>
+                        </div>
+
+                    </form>
+                </div>
+
+            </div>
         </div>
     </div>
 
-    <script src="../js/abrigo.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <!-- Tabla -->
+    <div class="table-responsive mt-3">
+        <table class="table table-striped table-bordered">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Nombre</th>
+                    <th>Descripción</th>
+                    <th>Estado</th>
+                    <th>Correo</th>
+                    <th>Acciones</th>
+                </tr>
+            </thead>
+            <tbody id="tablaDatos"></tbody>
+        </table>
+    </div>
+
+</div>
+
+<script src="../js/abrigo.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
 <script src="../js/layout.js"></script>
-
-
 
 </body>
 </html>
