--- a/web/module/responsables.html
+++ b/web/module/responsables.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>  
 </head>
 
 
