--- a/web/module/ong.html
+++ b/web/module/ong.html
@@ -4,14 +4,14 @@
     <title>ONG</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-      <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>  
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>  
 </head>
 
-
-
 <body>
-  <div id="seccionMenu"></div>
+    <div id="seccionMenu"></div>
+
     <div class="container mt-4">
         <h1>ONG / Casas Hogar</h1>
 
@@ -19,13 +19,16 @@
             Crear ONG
         </button>
 
+        <!-- Modal -->
         <div class="modal fade" id="modalOng" tabindex="-1" aria-labelledby="modalOngLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
+
                     <div class="modal-header">
                         <h5 class="modal-title" id="modalOngLabel">Registrar ONG</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
                     </div>
+
                     <div class="modal-body">
                         <form id="ongFormulario">
                             <div class="mb-3">
@@ -53,11 +56,13 @@
                                 <button type="reset" class="btn btn-secondary">Limpiar</button>
                             </div>
                         </form>
-                    </div>                    
+                    </div>   
+
                 </div>
             </div>
         </div>
 
+        <!-- Tabla -->
         <div class="table-responsive mt-3">
             <table class="table table-striped table-bordered">
                 <thead>
@@ -68,6 +73,7 @@
                         <th>Teléfono</th>
                         <th>Correo</th>
                         <th>Capacidad</th>
+                        <th>Acciones</th> 
                     </tr>
                 </thead>
                 <tbody id="tablaDatos"></tbody>
@@ -75,9 +81,9 @@
         </div>
     </div>
 
+    <!-- Scripts -->
     <script src="../js/ong.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="../js/layout.js"></script>
 </body>
 </html>
