--- a/web/module/responsables.html
+++ b/web/module/responsables.html
@@ -1,17 +1,17 @@
-
 <!doctype html>
 <html lang="es">
 <head>
     <title>Responsables</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>  
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </head>
 
-
 <body>
-  <div id="seccionMenu"></div>
+    <div id="seccionMenu"></div>
+
     <div class="container mt-4">
         <h1>Responsables</h1>
 
@@ -19,13 +19,16 @@
             Crear responsable
         </button>
 
+        <!-- Modal -->
         <div class="modal fade" id="modalResp" tabindex="-1" aria-labelledby="modalRespLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
+
                     <div class="modal-header">
                         <h5 class="modal-title" id="modalRespLabel">Registrar responsable</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
                     </div>
+
                     <div class="modal-body">
                         <form id="responsablesFormulario">
                             <div class="mb-3">
@@ -49,11 +52,13 @@
                                 <button type="reset" class="btn btn-secondary">Limpiar</button>
                             </div>
                         </form>
-                    </div>                    
+                    </div>
+
                 </div>
             </div>
         </div>
 
+        <!-- Tabla -->
         <div class="table-responsive mt-3">
             <table class="table table-striped table-bordered">
                 <thead>
@@ -63,6 +68,7 @@
                         <th>Cargo</th>
                         <th>Teléfono</th>
                         <th>Correo</th>
+                        <th>Acciones</th>
                     </tr>
                 </thead>
                 <tbody id="tablaDatos"></tbody>
@@ -70,9 +76,10 @@
         </div>
     </div>
 
+    <!-- Scripts -->
     <script src="../js/responsables.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="../js/layout.js"></script>
 </body>
 </html>
+
