--- a/web/module/familiares.html
+++ b/web/module/familiares.html
@@ -4,43 +4,51 @@
     <title>Familiares</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-      <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>  
+
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </head>
 
-
-
 <body>
-  <div id="seccionMenu"></div>
+    <div id="seccionMenu"></div>
+
     <div class="container mt-4">
         <h1>Familiares del niño</h1>
 
         <button type="button" class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#modalFamiliar">
             Registrar familiar
         </button>
-        
 
+        <!-- Modal -->
         <div class="modal fade" id="modalFamiliar" tabindex="-1" aria-labelledby="modalFamiliarLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
+
                     <div class="modal-header">
                         <h5 class="modal-title" id="modalFamiliarLabel">Registrar familiar</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
                     </div>
+
                     <div class="modal-body">
                         <form id="familiarFormulario">
                             <div class="mb-3">
                                 <label class="form-label">Nombre</label>
                                 <input type="text" class="form-control" id="nombre" required />
                             </div>
+
                             <div class="mb-3">
                                 <label class="form-label">Parentesco</label>
                                 <input type="text" class="form-control" id="parentesco" />
                             </div>
+
                             <div class="mb-3">
                                 <label class="form-label">Teléfono</label>
                                 <input type="text" class="form-control" id="telefono" />
                             </div>
+
                             <div class="mb-3">
                                 <label class="form-label">Estado de contacto</label>
                                 <select class="form-select" id="estado_contacto">
@@ -49,20 +57,24 @@
                                     <option value="Contacto frecuente">Contacto frecuente</option>
                                 </select>
                             </div>
+
                             <div class="mb-3">
                                 <label class="form-label">ID Niño</label>
                                 <input type="text" class="form-control" id="id_nino" required />
                             </div>
+
                             <div class="text-end">
                                 <button type="submit" class="btn btn-primary">Guardar</button>
                                 <button type="reset" class="btn btn-secondary">Limpiar</button>
                             </div>
                         </form>
-                    </div>                    
+                    </div>
+
                 </div>
             </div>
         </div>
 
+        <!-- Tabla -->
         <div class="table-responsive mt-3">
             <table class="table table-striped table-bordered">
                 <thead>
@@ -73,6 +85,7 @@
                         <th>Teléfono</th>
                         <th>Estado contacto</th>
                         <th>ID Niño</th>
+                        <th>Acciones</th>
                     </tr>
                 </thead>
                 <tbody id="tablaDatos"></tbody>
@@ -80,9 +93,9 @@
         </div>
     </div>
 
+    <!-- Scripts -->
     <script src="../js/familiares.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="../js/layout.js"></script>
 </body>
 </html>
