--- a/web/module/ninos.html
+++ b/web/module/ninos.html
@@ -5,14 +5,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>  
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </head>
 
-
-
-
 <body>
-  <div id="seccionMenu"></div>
+    <div id="seccionMenu"></div>
     <div class="container mt-4">
         <h1>Niños</h1>
 
@@ -41,7 +38,7 @@
                             </div>
 
                             <div class="mb-3">
-                                <label class="form-label">Genero</label>
+                                <label class="form-label">Género</label>
                                 <select class="form-select" id="genero">
                                     <option value="">Seleccione</option>
                                     <option value="F">Femenino</option>
@@ -93,9 +90,10 @@
                         <th>ID</th>
                         <th>Nombre</th>
                         <th>Fecha nacimiento</th>
-                        <th>Genero</th>
+                        <th>Género</th>
                         <th>Dirección actual</th>
                         <th>Estado</th>
+                        <th>Acciones</th>
                     </tr>
                 </thead>
                 <tbody id="tablaDatos"></tbody>
@@ -105,7 +103,6 @@
 
     <script src="../js/ninos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="../js/layout.js"></script>
 </body>
 </html>
