--- a/web/module/alertas.html
+++ b/web/module/alertas.html
@@ -4,15 +4,16 @@
     <title>Alertas</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-      <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>  
+
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </head>
 
-
-
-
 <body>
-   <div id="seccionMenu"></div>
+    <div id="seccionMenu"></div>
 
     <div class="container mt-4">
         <h1>Alertas del sistema</h1>
@@ -21,13 +22,16 @@
             Registrar alerta
         </button>
 
+        <!-- Modal -->
         <div class="modal fade" id="modalAlerta" tabindex="-1" aria-labelledby="modalAlertaLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
+
                     <div class="modal-header">
                         <h5 class="modal-title" id="modalAlertaLabel">Registrar alerta</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
                     </div>
+
                     <div class="modal-body">
                         <form id="alertaFormulario">
                             <div class="mb-3">
@@ -59,11 +63,13 @@
                                 <button type="reset" class="btn btn-secondary">Limpiar</button>
                             </div>
                         </form>
-                    </div>                    
+                    </div>
+
                 </div>
             </div>
         </div>
 
+        <!-- Tabla -->
         <div class="table-responsive mt-3">
             <table class="table table-striped table-bordered">
                 <thead>
@@ -74,6 +80,7 @@
                         <th>Fecha generada</th>
                         <th>Días restantes</th>
                         <th>Estado</th>
+                        <th>Acciones</th>
                     </tr>
                 </thead>
                 <tbody id="tablaDatos"></tbody>
@@ -81,11 +88,9 @@
         </div>
     </div>
 
-    
-   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="../js/layout.js"></script>
+    <!-- Scripts -->
     <script src="../js/alertas.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
- 
+    <script src="../js/layout.js"></script>
 </body>
 </html>
