--- a/web/module/familiares.html
+++ b/web/module/familiares.html
@@ -5,21 +5,28 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script> 
+    <link rel="stylesheet" href="../css/Styles.css" />
 </head>
 
 <body>
     <div id="seccionMenu"></div>
 
+
+    <!-- header-->
+    <div class="page-header">
+        <div class="main-container">
+          <h1><i class="bi bi-person-vcard"></i> Familiares</h1>
+          <p>Gestión de familiares de los niños</p>
+        </div>
+      </div>
+
     <div class="container mt-4">
-        <h1>Familiares del niño</h1>
 
         <button type="button" class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#modalFamiliar">
-            Registrar familiar
+            <i class="bi bi-plus-circle"></i> Registrar familiar
         </button>
 
         <!-- Modal -->
@@ -28,7 +35,7 @@
                 <div class="modal-content">
 
                     <div class="modal-header">
-                        <h5 class="modal-title" id="modalFamiliarLabel">Registrar familiar</h5>
+                        <h5 class="modal-title" id="modalFamiliarLabel"><i class="bi bi-person-plus"></i> Registrar familiar</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
                     </div>
 
@@ -63,10 +70,14 @@
                                 <input type="text" class="form-control" id="id_nino" required />
                             </div>
 
-                            <div class="text-end">
-                                <button type="submit" class="btn btn-primary">Guardar</button>
-                                <button type="reset" class="btn btn-secondary">Limpiar</button>
-                            </div>
+                            <div class="d-flex gap-2 justify-content-end">
+                            <button type="reset" class="btn btn-secondary">
+                                <i class="bi bi-arrow-clockwise"></i> Limpiar
+                            </button>
+                            <button type="submit" class="btn btn-primary">
+                                <i class="bi bi-check-circle"></i> Guardar
+                            </button>
+                        </div>
                         </form>
                     </div>
 
@@ -93,6 +104,9 @@
         </div>
     </div>
 
+
+
+    <div id="seccionFooter"></div>
     <!-- Scripts -->
     <script src="../js/familiares.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
