--- a/web/module/adopciones.html
+++ b/web/module/adopciones.html
@@ -1,86 +1,137 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
-<head>
+  <head>
     <title>Adopciones / Egresos</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-
-    <!-- jQuery -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-</head>
+    <link rel="stylesheet" href="../css/Styles.css" />
+  </head>
 
-<body>
+  <body>
     <div id="seccionMenu"></div>
+    <!-- Header -->
+      <div class="page-header">
+        <div class="main-container">
+          <h1><i class="bi bi-people"></i> Adopciones</h1>
+          <p>Gestión de adopciones</p>
+        </div>
+      </div>
     <div class="container mt-4">
-        <h1>Adopciones / Egresos</h1>
+      
 
-        <button type="button" class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#modalAdopcion">
-            Registrar egreso / adopción
-        </button>
+      <button
+        type="button"
+        class="btn btn-primary mb-3"
+        data-bs-toggle="modal"
+        data-bs-target="#modalAdopcion"
+      >
+        Registrar egreso / adopción
+      </button>
 
-        <!-- Modal -->
-        <div class="modal fade" id="modalAdopcion" tabindex="-1" aria-labelledby="modalAdopcionLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="modalAdopcionLabel">Registrar egreso / adopción</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
-                    </div>
-
-                    <div class="modal-body">
-                        <form id="adopcionFormulario">
-                            <div class="mb-3">
-                                <label class="form-label">ID Niño</label>
-                                <input type="text" class="form-control" id="id_nino" required />
-                            </div>
-                            <div class="mb-3">
-                                <label class="form-label">Tipo</label>
-                                <input type="text" class="form-control" id="tipo" placeholder="Egreso a familia adoptiva, etc." required />
-                            </div>
-                            <div class="mb-3">
-                                <label class="form-label">Fecha</label>
-                                <input type="date" class="form-control" id="fecha" required />
-                            </div>
-                            <div class="mb-3">
-                                <label class="form-label">Detalles</label>
-                                <textarea class="form-control" id="detalles" rows="3"></textarea>
-                            </div>
-                            <div class="text-end">
-                                <button type="submit" class="btn btn-primary">Guardar</button>
-                                <button type="reset" class="btn btn-secondary">Limpiar</button>
-                            </div>
-                        </form>
-                    </div>
-
-                </div>
+      <!-- Modal -->
+      <div
+        class="modal fade"
+        id="modalAdopcion"
+        tabindex="-1"
+        aria-labelledby="modalAdopcionLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="modalAdopcionLabel">
+                <i class="bi bi-house-heart"></i> Registrar egreso / adopción
+              </h5>
+              <button
+                type="button"
+                class="btn-close btn-close-white"
+                data-bs-dismiss="modal"
+                aria-label="Cerrar"
+              ></button>
             </div>
-        </div>
 
-        <!-- Tabla -->
-        <div class="table-responsive mt-3">
-            <table class="table table-striped table-bordered">
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>ID Niño</th>
-                        <th>Tipo</th>
-                        <th>Fecha</th>
-                        <th>Detalles</th>
-                        <th>Acciones</th>
-                    </tr>
-                </thead>
-                <tbody id="tablaDatos"></tbody>
-            </table>
+            <div class="modal-body">
+              <form id="adopcionFormulario">
+                <div class="mb-3">
+                  <label class="form-label">ID Niño</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="id_nino"
+                    required
+                  />
+                </div>
+                <div class="mb-3">
+                  <label class="form-label">Tipo</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="tipo"
+                    placeholder="Egreso a familia adoptiva, etc."
+                    required
+                  />
+                </div>
+                <div class="mb-3">
+                  <label class="form-label">Fecha</label>
+                  <input type="date" class="form-control" id="fecha" required />
+                </div>
+                <div class="mb-3">
+                  <label class="form-label">Detalles</label>
+                  <textarea
+                    class="form-control"
+                    id="detalles"
+                    rows="3"
+                  ></textarea>
+                </div>
+                <div class="d-flex gap-2 justify-content-end">
+                            <button type="reset" class="btn btn-secondary">
+                                <i class="bi bi-arrow-clockwise"></i> Limpiar
+                            </button>
+                            <button type="submit" class="btn btn-primary">
+                                <i class="bi bi-check-circle"></i> Guardar
+                            </button>
+                        </div>
+              </form>
+            </div>
+          </div>
         </div>
+      </div>
+
+      <!-- Tabla -->
+      <div class="table-responsive mt-3">
+        <table class="table table-striped table-bordered">
+          <thead>
+            <tr>
+              <th><i class="bi bi-hash"></i> ID</th>
+              <th><i class="bi bi-person"></i> ID Niño</th>
+              <th><i class="bi bi-tag"></i> Tipo</th>
+              <th><i class="bi bi-calendar"></i> Fecha</th>
+              <th><i class="bi bi-file-text"></i> Detalles</th>
+              <th><i class="bi bi-gear"></i> Acciones</th>
+            </tr>
+          </thead>
+          <tbody id="tablaDatos"></tbody>
+        </table>
+      </div>
     </div>
 
+    <div id="seccionFooter"></div>
     <!-- Scripts -->
     <script src="../js/adopciones.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
     <script src="../js/layout.js"></script>
-</body>
+  </body>
 </html>
