--- a/web/module/hermanos.html
+++ b/web/module/hermanos.html
@@ -5,21 +5,27 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script> 
+    <link rel="stylesheet" href="../css/Styles.css" />
 </head>
 
 <body>
     <div id="seccionMenu"></div>
 
+    <!-- header-->
+    <div class="page-header">
+        <div class="main-container">
+          <h1><i class="bi bi-person-lines-fill"></i> Hermanos</h1>
+          <p>Gestión de hermanos de los niños</p>
+        </div>
+      </div>
+
     <div class="container mt-4">
-        <h1>Relación de hermanos</h1>
 
         <button type="button" class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#modalHermano">
-            Registrar relación
+            <i class="bi bi-plus-circle"></i> Registrar relación
         </button>
 
         <!-- Modal -->
@@ -46,10 +52,14 @@
                                 <label class="form-label">Tipo de relación</label>
                                 <input type="text" class="form-control" id="tipo" placeholder="Hermano biológico, de crianza, etc." />
                             </div>
-                            <div class="text-end">
-                                <button type="submit" class="btn btn-primary">Guardar</button>
-                                <button type="reset" class="btn btn-secondary">Limpiar</button>
-                            </div>
+                            <div class="d-flex gap-2 justify-content-end">
+                            <button type="reset" class="btn btn-secondary">
+                                <i class="bi bi-arrow-clockwise"></i> Limpiar
+                            </button>
+                            <button type="submit" class="btn btn-primary">
+                                <i class="bi bi-check-circle"></i> Guardar
+                            </button>
+                        </div>
                         </form>
                     </div>
 
