--- a/web/module/index.html
+++ b/web/module/index.html
@@ -5,11 +5,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>  
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script> 
+    <link rel="stylesheet" href="../css/Styles.css" />  
 
     <style>
         body {
@@ -99,7 +98,7 @@
                     <p class="module-text">
                         Gestión de la información principal de los niños registrados en el sistema.
                     </p>
-                    <a href="ninos.html" class="btn btn-primary btn-soft-primary px-4">Entrar</a>
+                    <a href="ninos.html" class="btn btn-outline-primary btn-soft-primary px-4">Entrar</a>
                 </div>
             </div>
 
@@ -162,8 +161,6 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
-
-    <!-- Layout (carga el menú) -->
-     <!--  <script src="../js/layout.js"></script>--> 
+    <script src="../js/layout.js"></script>
 </body>
 </html>
